# socratic-case-tutor

./: .gitignore  README.md  amplify.yml  docker-compose.yml
.github/workflows/: ci.yml
backend/: .dockerignore  .env.example  Dockerfile  pyproject.toml  seed.py
backend/src/: agent.py  claude_service.py  database.py  evaluator.py  main.py  models.py  pdf_service.py  rag_service.py
backend/tests/: conftest.py  test_agent.py  test_analytics.py  test_chat.py  test_database.py  test_evaluator.py  test_health.py  test_models.py  test_pdf_service.py  test_rag_service.py  test_sessions.py  test_upload.py
docs/superpowers/plans/: 2026-04-25-iteration-1-skateboard.md  2026-04-25-iteration-2-scooter.md  2026-04-26-iteration-3-motorcycle.md  2026-04-26-iteration-4a-langsmith-tracing.md  2026-04-26-iteration-4b-evaluator.md  2026-04-27-iteration-4c-persistence.md  2026-04-30-nextjs-migration.md  (+1 more)
frontend/: .env.production  index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
frontend/src/: App.tsx  api.ts  index.css
infra/terraform/: .terraform.lock.hcl  amplify.tf  app_runner.tf  ecr.tf  iam.tf  main.tf  outputs.tf  rds.tf  secrets.tf  variables.tf  vpc.tf
nextjs/: package-lock.json  package.json  playwright.config.ts  postcss.config.mjs  vitest.config.ts  vitest.setup.ts
nextjs/app/: globals.css  layout.tsx  page.tsx
nextjs/components/: Chat.tsx  Dashboard.tsx  FileUpload.tsx  SessionList.tsx  ThemeToggle.tsx
nextjs/e2e/: dashboard.spec.ts
nextjs/lib/: api.ts  session.ts
nextjs/providers/: SessionProvider.tsx
(+22 files in other folders)
