[project]
name = "backend"
version = "0.1.0"
description = "AI-powered case study tutor backend"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.97.0",
    "fastapi>=0.136.1",
    "pypdf>=6.10.2",
    "python-multipart>=0.0.26",
    "uvicorn[standard]>=0.46.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.3",
]
