[project]
name = "backend"
version = "0.1.0"
description = "AI-powered case study tutor backend"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.97.0",
    "asyncpg>=0.31.0",
    "fastapi>=0.136.1",
    "langchain>=0.3.0",
    "langchain-anthropic>=0.3.0",
    "langchain-chroma>=0.1.0",
    "langchain-classic>=1.0.0",
    "langchain-community>=0.3.0",
    "langchain-openai>=0.2.0",
    "langgraph>=1.1.9",
    "pypdf>=6.10.2",
    "python-dotenv>=1.0.0",
    "python-multipart>=0.0.26",
    "uvicorn[standard]>=0.46.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
